--- a/cat-jjal-maker-cra/public/index.html
+++ b/cat-jjal-maker-cra/public/index.html
@@ -26,6 +26,15 @@
     -->
     <title>React App</title>
   </head>
+  <style>
+    @font-face {
+      font-family: "BMJUA";
+      src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff")
+        format("woff");
+      font-weight: normal;
+      font-style: normal;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
